# CMakeTemplate

./: CMakeLists.txt  README.md  build_debug.sh  build_release.sh
src/test/: CMakeLists.txt
